--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,13 +1,42 @@
 @import "~bootstrap/scss/bootstrap.scss";
 
-/* 
+.trafficTop{
+   background-color: black;
+   width: 20px;
+    height: 100px;
+    margin: auto;
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+.trafficBody{
 
-*/
+    background-color: black;
+    width: 200px;
+    height:350px ;
+    margin: auto;
+    border-radius: 10%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    div{
+        border-radius: 50%;
+        width: 100px;
+        height: 100px;
+    }
+}
+
+.red{
+    background-color: red;
+}
+
+.yellow{
+    background-color: yellow;
+}
+
+.green{
+    background-color: green;
+}
+
+.selected{
+    box-shadow: 0px 0px 60px rgb(245, 245, 220);
+}
